--- a/src/POSSIBLE.ProfiledContentRepository.csproj
+++ b/src/POSSIBLE.ProfiledContentRepository.csproj
@@ -31,101 +31,101 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EPiServer, Version=7.0.586.1, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
-      <Private>True</Private>
-      <HintPath>packages\EPiServer.CMS.Core.7.0.586.1\lib\net40\EPiServer.dll</HintPath>
+    <Reference Include="EPiServer, Version=7.0.586.4, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>packages\EPiServer.CMS.Core.7.0.586.4\lib\EPiServer.dll</HintPath>
     </Reference>
-    <Reference Include="EPiServer.ApplicationModules, Version=7.0.859.1, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
-      <Private>True</Private>
-      <HintPath>packages\EPiServer.Framework.7.0.859.1\lib\net40\EPiServer.ApplicationModules.dll</HintPath>
+    <Reference Include="EPiServer.ApplicationModules, Version=7.0.859.4, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>packages\EPiServer.Framework.7.0.859.4\lib\EPiServer.ApplicationModules.dll</HintPath>
     </Reference>
-    <Reference Include="EPiServer.BaseLibrary, Version=7.0.586.1, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
-      <Private>True</Private>
-      <HintPath>packages\EPiServer.CMS.Core.7.0.586.1\lib\net40\EPiServer.BaseLibrary.dll</HintPath>
+    <Reference Include="EPiServer.BaseLibrary, Version=7.0.586.4, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>packages\EPiServer.CMS.Core.7.0.586.4\lib\EPiServer.BaseLibrary.dll</HintPath>
     </Reference>
-    <Reference Include="EPiServer.Blog, Version=7.0.586.1, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
-      <Private>True</Private>
-      <HintPath>packages\EPiServer.CMS.Core.7.0.586.1\lib\net40\EPiServer.Blog.dll</HintPath>
+    <Reference Include="EPiServer.Blog, Version=7.0.586.4, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>packages\EPiServer.CMS.Core.7.0.586.4\lib\EPiServer.Blog.dll</HintPath>
     </Reference>
-    <Reference Include="EPiServer.Configuration, Version=7.0.586.1, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
-      <Private>True</Private>
-      <HintPath>packages\EPiServer.CMS.Core.7.0.586.1\lib\net40\EPiServer.Configuration.dll</HintPath>
+    <Reference Include="EPiServer.Configuration, Version=7.0.586.4, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>packages\EPiServer.CMS.Core.7.0.586.4\lib\EPiServer.Configuration.dll</HintPath>
     </Reference>
-    <Reference Include="EPiServer.Data, Version=7.0.859.1, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
-      <Private>True</Private>
-      <HintPath>packages\EPiServer.Framework.7.0.859.1\lib\net40\EPiServer.Data.dll</HintPath>
+    <Reference Include="EPiServer.Data, Version=7.0.859.4, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>packages\EPiServer.Framework.7.0.859.4\lib\EPiServer.Data.dll</HintPath>
     </Reference>
-    <Reference Include="EPiServer.Data.Cache, Version=7.0.859.1, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
-      <Private>True</Private>
-      <HintPath>packages\EPiServer.Framework.7.0.859.1\lib\net40\EPiServer.Data.Cache.dll</HintPath>
+    <Reference Include="EPiServer.Data.Cache, Version=7.0.859.4, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>packages\EPiServer.Framework.7.0.859.4\lib\EPiServer.Data.Cache.dll</HintPath>
     </Reference>
-    <Reference Include="EPiServer.Enterprise, Version=7.0.586.1, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
-      <Private>True</Private>
-      <HintPath>packages\EPiServer.CMS.Core.7.0.586.1\lib\net40\EPiServer.Enterprise.dll</HintPath>
+    <Reference Include="EPiServer.Enterprise, Version=7.0.586.4, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>packages\EPiServer.CMS.Core.7.0.586.4\lib\EPiServer.Enterprise.dll</HintPath>
     </Reference>
-    <Reference Include="EPiServer.Events, Version=7.0.859.1, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
-      <Private>True</Private>
-      <HintPath>packages\EPiServer.Framework.7.0.859.1\lib\net40\EPiServer.Events.dll</HintPath>
+    <Reference Include="EPiServer.Events, Version=7.0.859.4, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>packages\EPiServer.Framework.7.0.859.4\lib\EPiServer.Events.dll</HintPath>
     </Reference>
-    <Reference Include="EPiServer.Framework, Version=7.0.859.1, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
-      <Private>True</Private>
-      <HintPath>packages\EPiServer.Framework.7.0.859.1\lib\net40\EPiServer.Framework.dll</HintPath>
+    <Reference Include="EPiServer.Framework, Version=7.0.859.4, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>packages\EPiServer.Framework.7.0.859.4\lib\EPiServer.Framework.dll</HintPath>
     </Reference>
-    <Reference Include="EPiServer.ImageLibrary, Version=7.0.586.1, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
-      <Private>True</Private>
-      <HintPath>packages\EPiServer.CMS.Core.7.0.586.1\lib\net40\EPiServer.ImageLibrary.dll</HintPath>
+    <Reference Include="EPiServer.ImageLibrary, Version=7.0.586.4, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>packages\EPiServer.CMS.Core.7.0.586.4\lib\EPiServer.ImageLibrary.dll</HintPath>
     </Reference>
-    <Reference Include="EPiServer.Implementation, Version=7.0.586.1, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
-      <Private>True</Private>
-      <HintPath>packages\EPiServer.CMS.Core.7.0.586.1\lib\net40\EPiServer.Implementation.dll</HintPath>
+    <Reference Include="EPiServer.Implementation, Version=7.0.586.4, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>packages\EPiServer.CMS.Core.7.0.586.4\lib\EPiServer.Implementation.dll</HintPath>
     </Reference>
-    <Reference Include="EPiServer.Licensing, Version=7.0.859.1, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
-      <Private>True</Private>
-      <HintPath>packages\EPiServer.Framework.7.0.859.1\lib\net40\EPiServer.Licensing.dll</HintPath>
+    <Reference Include="EPiServer.Licensing, Version=7.0.859.4, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>packages\EPiServer.Framework.7.0.859.4\lib\EPiServer.Licensing.dll</HintPath>
     </Reference>
-    <Reference Include="EPiServer.LinkAnalyzer, Version=7.0.586.1, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
-      <Private>True</Private>
-      <HintPath>packages\EPiServer.CMS.Core.7.0.586.1\lib\net40\EPiServer.LinkAnalyzer.dll</HintPath>
+    <Reference Include="EPiServer.LinkAnalyzer, Version=7.0.586.4, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>packages\EPiServer.CMS.Core.7.0.586.4\lib\EPiServer.LinkAnalyzer.dll</HintPath>
     </Reference>
-    <Reference Include="EPiServer.Scheduler, Version=7.0.586.1, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
-      <Private>True</Private>
-      <HintPath>packages\EPiServer.CMS.Core.7.0.586.1\lib\net40\EPiServer.Scheduler.dll</HintPath>
+    <Reference Include="EPiServer.Scheduler, Version=7.0.586.4, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>packages\EPiServer.CMS.Core.7.0.586.4\lib\EPiServer.Scheduler.dll</HintPath>
     </Reference>
     <Reference Include="EPiServer.Scheduler.WKTL, Version=5.1.422.4, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
       <Private>True</Private>
-      <HintPath>packages\EPiServer.CMS.Core.7.0.586.1\lib\net40\EPiServer.Scheduler.WKTL.dll</HintPath>
+      <HintPath>packages\EPiServer.CMS.Core.7.0.586.4\lib\EPiServer.Scheduler.WKTL.dll</HintPath>
     </Reference>
-    <Reference Include="EPiServer.Shell, Version=7.0.859.1, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
-      <Private>True</Private>
-      <HintPath>packages\EPiServer.Framework.7.0.859.1\lib\net40\EPiServer.Shell.dll</HintPath>
-    </Reference>
-    <Reference Include="EPiServer.UI, Version=7.0.586.1, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
-      <Private>True</Private>
-      <HintPath>packages\EPiServer.CMS.Core.7.0.586.1\lib\net40\EPiServer.UI.dll</HintPath>
-    </Reference>
-    <Reference Include="EPiServer.Web.WebControls, Version=7.0.586.1, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
-      <Private>True</Private>
-      <HintPath>packages\EPiServer.CMS.Core.7.0.586.1\lib\net40\EPiServer.Web.WebControls.dll</HintPath>
-    </Reference>
-    <Reference Include="EPiServer.WebDav, Version=7.0.586.1, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
+    <Reference Include="EPiServer.Shell, Version=7.0.859.4, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>packages\EPiServer.CMS.Core.7.0.586.1\lib\net40\EPiServer.WebDav.dll</HintPath>
+      <HintPath>packages\EPiServer.Framework.7.0.859.4\lib\EPiServer.Shell.dll</HintPath>
     </Reference>
-    <Reference Include="EPiServer.WebParts, Version=7.0.586.1, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
-      <Private>True</Private>
-      <HintPath>packages\EPiServer.CMS.Core.7.0.586.1\lib\net40\EPiServer.WebParts.dll</HintPath>
+    <Reference Include="EPiServer.UI, Version=7.0.586.4, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>packages\EPiServer.CMS.Core.7.0.586.4\lib\EPiServer.UI.dll</HintPath>
     </Reference>
-    <Reference Include="EPiServer.WorkflowFoundation, Version=7.0.586.1, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
-      <Private>True</Private>
-      <HintPath>packages\EPiServer.CMS.Core.7.0.586.1\lib\net40\EPiServer.WorkflowFoundation.dll</HintPath>
+    <Reference Include="EPiServer.Web.WebControls, Version=7.0.586.4, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>packages\EPiServer.CMS.Core.7.0.586.4\lib\EPiServer.Web.WebControls.dll</HintPath>
     </Reference>
-    <Reference Include="EPiServer.XForms, Version=7.0.586.1, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
-      <Private>True</Private>
-      <HintPath>packages\EPiServer.CMS.Core.7.0.586.1\lib\net40\EPiServer.XForms.dll</HintPath>
+    <Reference Include="EPiServer.WebDav, Version=7.0.586.4, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>packages\EPiServer.CMS.Core.7.0.586.4\lib\EPiServer.WebDav.dll</HintPath>
     </Reference>
-    <Reference Include="EPiServer.XmlRpc, Version=7.0.586.1, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
-      <Private>True</Private>
-      <HintPath>packages\EPiServer.CMS.Core.7.0.586.1\lib\net40\EPiServer.XmlRpc.dll</HintPath>
+    <Reference Include="EPiServer.WebParts, Version=7.0.586.4, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>packages\EPiServer.CMS.Core.7.0.586.4\lib\EPiServer.WebParts.dll</HintPath>
+    </Reference>
+    <Reference Include="EPiServer.WorkflowFoundation, Version=7.0.586.4, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>packages\EPiServer.CMS.Core.7.0.586.4\lib\EPiServer.WorkflowFoundation.dll</HintPath>
+    </Reference>
+    <Reference Include="EPiServer.XForms, Version=7.0.586.4, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>packages\EPiServer.CMS.Core.7.0.586.4\lib\EPiServer.XForms.dll</HintPath>
+    </Reference>
+    <Reference Include="EPiServer.XmlRpc, Version=7.0.586.4, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>packages\EPiServer.CMS.Core.7.0.586.4\lib\EPiServer.XmlRpc.dll</HintPath>
     </Reference>
     <Reference Include="MiniProfiler, Version=2.1.0.0, Culture=neutral, PublicKeyToken=b44f9351044011a3, processorArchitecture=MSIL">
       <HintPath>..\..\EPiServerCMS7\7.0.579.1\packages\MiniProfiler.2.1.0\lib\net40\MiniProfiler.dll</HintPath>
